requiredlabels/gatekeeper/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    owner: admin
spec:
  containers:
    - name: tomcat
      image: tomcat
